actix-web-thiserror/tests/compile-fail/details-invalid.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/details-invalid.rs:4:24
  |
4 | #[derive(Debug, Error, ResponseError)]
  |                        ^^^^^^^^^^^^^
  |
  = help: message: Invalid `details` in #[response]
